Bug 490183 - Updating to Frameworks 6.4.0 broke Dolphin.
Summary: Updating to Frameworks 6.4.0 broke Dolphin.
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.05.2
Platform: Fedora RPMs Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6, wayland-only
: 490144 490216 490217 490443 490467 490516 492284 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-07-12 15:40 UTC by Victor Ryzhykh
Modified: 2024-08-27 21:04 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.1
Sentry Crash Report:


Attachments
Dolphin (2.69 MB, video/webm)
2024-07-12 16:11 UTC, Victor Ryzhykh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Ryzhykh 2024-07-12 15:40:01 UTC
Updating to Frameworks 6.4.0 broke Dolphin.
This is in the Wayland session.
Copying files between tabs stopped working correctly.
And with prolonged attempts to copy by dragging, the Dolphin generally begins to freeze a lot.
The files stop displaying and Dolphin has to be restarted.
I checked it on Fedor and Rosa.
The problem repeats itself.
Rolling back to Frameworks 6.43.0 fixes this problem.

Operating System: Fedora Linux 41
KDE Plasma Version: 6.1.2
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Kernel Version: 6.10.0-0.rc7.58.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × 11th Gen Intel® Core™ i7-11800H @ 2.30GHz
Memory: 38.8 ГиБ of RAM
Graphics Processor: Mesa Intel® UHD Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: ROG Zephyrus M16 GU603HE_GU603HE
System Version: 1.0
Comment 1 Victor Ryzhykh 2024-07-12 15:41:35 UTC
Same problem in Rosa.

Operating System: ROSA Fresh Desktop 2023.1
KDE Plasma Version: 6.1.2
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2
Kernel Version: 6.9.9-generic-1rosa2023.1-x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-7700K CPU @ 4.20GHz
Memory: 15.5 ГиБ of RAM
Graphics Processor: NVIDIA GeForce RTX 3050/PCIe/SSE2
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: B250M-D3H
Comment 2 Victor Ryzhykh 2024-07-12 15:46:41 UTC
For now I'll roll back to the previous version.
On Frameworks 6.3.0.
It's impossible to work.
Comment 3 Victor Ryzhykh 2024-07-12 16:11:13 UTC
Created attachment 171610 [details]
Dolphin

Glitch in Dolphin.
Comment 4 Victor Ryzhykh 2024-07-12 16:56:11 UTC
When launched in the console

victor@aquarius ~ $ dolphin
QGestureManager::deliverEvent: could not find the target for gesture
Comment 5 Victor Ryzhykh 2024-07-13 09:12:05 UTC
Duplicate https://bugs.kde.org/show_bug.cgi?id=490216
Comment 6 Antonio Rojas 2024-07-13 11:16:13 UTC
*** Bug 490216 has been marked as a duplicate of this bug. ***
Comment 7 Antonio Rojas 2024-07-13 11:16:49 UTC
*** Bug 490217 has been marked as a duplicate of this bug. ***
Comment 8 Nicolas Fella 2024-07-13 17:11:59 UTC
This is caused by https://invent.kde.org/frameworks/kio/-/merge_requests/1650
Comment 9 Victor Ryzhykh 2024-07-13 18:55:53 UTC
(In reply to Nicolas Fella from comment #8)
> This is caused by https://invent.kde.org/frameworks/kio/-/merge_requests/1650

Exactly. I rolled back this commit, and the problem was gone. Thank you for your prompt response.
Comment 10 Vlad Zahorodnii 2024-07-15 06:05:38 UTC
(In reply to Nicolas Fella from comment #8)
> This is caused by https://invent.kde.org/frameworks/kio/-/merge_requests/1650

It's not entirely correct. The issue appeared after https://invent.kde.org/frameworks/kwidgetsaddons/-/commit/d3ffa52bf2deb487ce9761551c08b6905a5dffb1. Not quite sure why it broke dolphin
Comment 11 Bug Janitor Service 2024-07-15 06:55:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1660
Comment 12 Victor Ryzhykh 2024-07-15 07:47:25 UTC
(In reply to Bug Janitor Service from comment #11)
> A possibly relevant merge request was started @
> https://invent.kde.org/frameworks/kio/-/merge_requests/1660

Yes, this commit fixes Dolphin.
There are no freezes or crashes.
Comment 13 Vlad Zahorodnii 2024-07-15 08:30:28 UTC
Git commit e0ea91afdf0dccef7e3afbf23a159bf5a8d6b249 by Vlad Zahorodnii.
Committed on 15/07/2024 at 08:15.
Pushed by vladz into branch 'master'.

Remove parent for DropMenu

QWidget::winId() will force creating window handles for all its ancestor
widgets unless the Qt::WA_DontCreateNativeAncestors flag is set.

For example, on wayland, this would result in creating sub-surfaces, and
depending on the client, it's likely that there are going to be issues with
painting.

On the other hand, since the DropJob takes care of setting the transient
parent for the DropMenu, the parent can be simply omitted.

M  +2    -2    src/widgets/dropjob.cpp

https://invent.kde.org/frameworks/kio/-/commit/e0ea91afdf0dccef7e3afbf23a159bf5a8d6b249
Comment 14 Antonio Rojas 2024-07-18 10:47:49 UTC
*** Bug 490443 has been marked as a duplicate of this bug. ***
Comment 15 Antonio Rojas 2024-07-18 21:57:41 UTC
*** Bug 490467 has been marked as a duplicate of this bug. ***
Comment 16 zed556@gmail.com 2024-07-19 09:28:01 UTC
Returning to X11, all is well.
Comment 17 Nicolas Fella 2024-07-19 11:36:03 UTC
Git commit c1ea1e2a7333dea1b9b4e2a4d059473b61e680b5 by Nicolas Fella, on behalf of Vlad Zahorodnii.
Committed on 19/07/2024 at 11:30.
Pushed by nicolasfella into branch 'Frameworks/6.4'.

Remove parent for DropMenu

QWidget::winId() will force creating window handles for all its ancestor
widgets unless the Qt::WA_DontCreateNativeAncestors flag is set.

For example, on wayland, this would result in creating sub-surfaces, and
depending on the client, it's likely that there are going to be issues with
painting.

On the other hand, since the DropJob takes care of setting the transient
parent for the DropMenu, the parent can be simply omitted.
(cherry picked from commit e0ea91afdf0dccef7e3afbf23a159bf5a8d6b249)

M  +2    -2    src/widgets/dropjob.cpp

https://invent.kde.org/frameworks/kio/-/commit/c1ea1e2a7333dea1b9b4e2a4d059473b61e680b5
Comment 18 Antonio Rojas 2024-07-19 19:20:51 UTC
*** Bug 490516 has been marked as a duplicate of this bug. ***
Comment 19 David de Cos 2024-07-21 14:13:08 UTC
*** Bug 490144 has been marked as a duplicate of this bug. ***
Comment 20 Antonio Rojas 2024-08-27 21:04:51 UTC
*** Bug 492284 has been marked as a duplicate of this bug. ***